# gi

./: .buckconfig  .gitignore  .travis.yml  BUCK  CMakeLists.txt  README.md  linalg.h  main.cpp
cs/: Program.cs  gi.sln
